add dependencies and ci